# ferris

./: .gitignore  Makefile.am  README  config.h.in  configure.ac  runtests.sh
DBusGlue/: Makefile.am
Ferris/: Agent.cpp  AgentSVMLight.cpp  Agent_private.hh  AsyncIO.cpp  AsyncIO.hh  Attribute.cpp  Attribute.hh  BranchContext.cpp  BranchContext_private.hh  Cache.hh  CacheManager.cpp  CacheManager_private.hh  ChainedViewContext.cpp  ChainedViewContext.hh  ChildStreamServer.cpp  ChildStreamServer.hh  Configuration.cpp  Configuration.hh  Configuration_private.hh  Context.cpp  Context.hh  ContextPopt.cpp  ContextSetCompare.cpp  Context_private.hh  DBus_private.hh  EAIndexer.hh  EAIndexerCustomFerris.cpp  EAIndexerMetaInterface.cpp  EAIndexerMetaInterface.hh  EAQuery.cpp  Enamel.cpp  Enamel.hh  EtagereContext.cpp  FCA.cpp  FCA.hh  FSParser_private.hh  Ferris.cpp  Ferris.hh  FerrisAsTextPlugin.hh  FerrisBitMagic.hh  (+73 more)
FerrisGCJ/: Makefile.am
FerrisQtGui/: FerrisFileSystemModel.cpp  Makefile.am
FerrisUI/: ContextPropertiesEditor.cpp  ContextPropertiesEditor.hh  FerrisCopyUI.cpp  FerrisOptionMenu.cpp  FerrisOptionMenu.hh  FerrisRemoveUI.cpp  GtkFerris.cpp  GtkFerris.hh  Makefile.am  MedallionEditor.cpp  MedallionEditor.hh  Menus.cpp  Menus.hh  SubprocessButtonAndLabel.cpp  SubprocessButtonAndLabel.hh  gtkferristreestore.cpp  gtkferristreestore.hh
Indexing/: BoostMultiIndexLexicon.cpp  FilesystemLexicon.cpp  IndexPrivate.hh  Makefile.am  ThreeInFourLexicon.cpp  UncompressedDB4.cpp  XMLLexicon.cpp
apps/: Makefile.am  ferris-setup-template-findex-database.sh
apps/ai/: Makefile.am
apps/cat/: Makefile.am  fcat.cpp
apps/copy/: Makefile.am  ferriscp.cpp
apps/cursors/: Makefile.am
apps/du/: Makefile.am
apps/fca/: Makefile.am
apps/fcompress/: Makefile.am
apps/fcreate/: .gitignore  ferriscreatecommon.cpp
apps/ferriscd/: Makefile.am
apps/ferrisredirect/: Makefile.am
apps/fileactions/: Makefile.am
apps/fileclip/fclipcopy/: Makefile.am
apps/fileclip/fclipcut/: Makefile.am
apps/fileclip/fcliplink/: Makefile.am
apps/fileclip/fclippaste/: Makefile.am
apps/fileclip/fclipredo/: Makefile.am
apps/fmedallion/: Makefile.am
apps/fmkdir/: Makefile.am  fmkdir.cpp
apps/fmodestr2octal/: Makefile.am
apps/frunner/: Makefile.am
apps/fschema/: Makefile.am
apps/ftouch/: Makefile.am
apps/fulltextindex/: Makefile.am  findexadd.cpp
apps/head/: Makefile.am
apps/importdesktop/: Makefile.am
apps/ls/: Makefile.am
apps/metadataserver/: Makefile.am
apps/mv/: Makefile.am
apps/namespaces/: Makefile.am
apps/oprocdeamon/: Makefile.am  ferris-out-of-proc-notification-deamon.cpp
apps/rdf/: Makefile.am  ferris-myrdf-inference.cpp
apps/rest/: Makefile.am
apps/rm/: Makefile.am
apps/tail/: Makefile.am
apps/tools/: Makefile.am
apps/upnpserver/: Makefile.am
apps/volumemanager/: Makefile.am  ferris-volume-manager.cpp
apps/xml/: Makefile.am  ferris-filesystem-to-xsltfs-sheets.cpp
apps/xmmsdaemon/: Makefile.am
appsui/: Makefile.am
appsui/gfcopy/: Makefile.am
appsui/gfcreate/: .gitignore
appsui/gfdl/: Makefile.am
appsui/gfindex/: Makefile.am  gfindexadd.cpp
appsui/gfmv/: Makefile.am
appsui/gfproperties/: Makefile.am
appsui/gfrm/: Makefile.am
appsui/volumemanager/: Makefile.am
dot-ferris/: emblems-and-etagere.boost  emblems-and-etagere.boost.txt
dot-ferris/rdfcacheattrs/: myrdf-contexts.db  myrdf-po2s.db  myrdf-so2p.db  myrdf-sp2o.db
eaindexers_custom_plugin/: Makefile.am  libeaidxcustomferris.cpp  libeaidxcustomferris.hh  libeaidxcustomferrisdb4tree.cpp
exposures/plasma/: Makefile.am
exposures/sqlitevtab/: Makefile.am
factories/eagenerators/: Makefile.am
firsttime/console/: Makefile.am
firsttime/ui/: Makefile.am
fulltextindexers_custom_plugin/: Makefile.am  libftxcustomferris.cpp  libftxcustomferris.hh
macros/: ferrismacros.m4
mg/: Makefile.am
migration/: Makefile.am
plugins/context/: FerrisContextPlugin.hh  Makefile.am
plugins/context/nativembox/: Makefile.am
plugins/context/recordfile/: Makefile.am
plugins/context/sockets/: Makefile.am
plugins/eagenerators/: FerrisEAPlugin.hh
plugins/eagenerators/a52/: Makefile.am
plugins/eagenerators/flac/: Makefile.am
plugins/eagenerators/fspot/: Makefile.am  libferrisfspot.cpp
plugins/eagenerators/id3/: Makefile.am
plugins/eagenerators/jasper/: Makefile.am
plugins/eagenerators/jpeg/: Makefile.am
plugins/eagenerators/kde3metadata/: Makefile.am
plugins/eagenerators/libextractor/: Makefile.am
plugins/eagenerators/libmpeg3/: Makefile.am
plugins/eagenerators/magick/: Makefile.am
plugins/eagenerators/mediainfo/: Makefile.am
plugins/eagenerators/oggz/: Makefile.am
plugins/eagenerators/png/: Makefile.am  libferrispng.cpp
plugins/eagenerators/strigi/: Makefile.am  libferrisstrigi.cpp
plugins/eagenerators/taglib/: Makefile.am
plugins/eagenerators/xfsnative/: Makefile.am  libxfsnative.cpp
plugins/eagenerators/xine/: Makefile.am
plugins/eaindexers/boost/: Makefile.am  libeaindexboostmmap.cpp
plugins/eaindexers/clucene/: Makefile.am  libeaindexclucene.cpp
plugins/eaindexers/federation/: Makefile.am  libeaindexfederation.cpp
plugins/eaindexers/lucene/: Makefile.am
plugins/eaindexers/qtsql/: Makefile.am  libeaindexqtsql.cpp
plugins/eaindexers/soprano/: Makefile.am
plugins/eaindexers/xapian/: Makefile.am
plugins/fulltextindexers/beagle/: Makefile.am
plugins/fulltextindexers/null/: Makefile.am
tests/contextiostream/: Makefile.am
tests/contextiterator/: Makefile.am
tests/extoy/: Makefile.am
tests/hiddensymbols/: Makefile.am
tests/links/: Makefile.am
tests/logging/: Makefile.am
tests/lucene/: Makefile.am
tests/quoting/: Makefile.am
tests/rdf/: Makefile.am
tests/regression/: Makefile.am  plaything.cpp
tests/runner/: Makefile.am
tests/sigtoy/: Makefile.am  sigtoy.cpp
tests/stringtrimming/: Makefile.am
tests/timeparsing/: Makefile.am
tests/touch/: Makefile.am
tests/trivial/: Makefile.am
testsuite/: ferris.sum  ut_cache.hh
testsuite/databases/: aom.sql  foobar.pg
xsltfunctions/: Makefile.am
(+172 files in other folders)
