
# if DISABLED_FERRIS_BUILD_KDE_EAGENERATOR

# plugindir = $(libdir)/ferris/plugins/eagenerators

# INCLUDES = -I$(top_srcdir)/plugins/eagenerators       \
# 	@KDE_EAGENERATOR_CFLAGS@                        \
# 	@CFLAGS@

# plugin_LTLIBRARIES = libferriskde3metadata.la 
# libferriskde3metadata_la_SOURCES = libferriskde3metadata.cpp
# libferriskde3metadata_la_LDFLAGS = @KDE_EAGENERATOR_LIBS@ @LIBFERRIS_EAPLUGIN_LT_LINE@

# endif
